-
Bug
-
Resolution: Done
-
P2: Important
-
5.9.4
-
None
-
036aa822455b4d831076a1ba364fa1ef304dee84
Add error message when type registration namespace is not set.
If one does
qmlRegisterUncreatableType<EnumTest>("enumtest",1,0,"enumtest", "empty");
and tries to access console.log("enumtest.high:" + enumtest.high); we only print out ReferenceError.
It would be more clear to give programmer indication why the enumtest was not registered, e.g. give indication that it should be uppercase.
For Gerrit Dashboard: QTBUG-68323 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
230725,5 | Show error message when type qmlRegisterType and friends fail | 5.11 | qt/qtdeclarative | Status: MERGED | +2 | 0 |