Show error message when type qmlRegisterType and friends fail

When a type is registered through qmlRegisterType or similar functions,
no error was shown.

Task-number: QTBUG-68323
Change-Id: Iff44bf8744c67dba2fdd12c43aaee44a8e15364a
Reviewed-by: Simon Hausmann <simon.hausmann@qt.io>